--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>primeiro projeto git</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Primeiro Projeto</h1>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi non sint
+      alias hic nostrum mollitia iure numquam libero qui veniam maxime minus
+      eum, tempore, dicta ea dolore nesciunt? Voluptatibus, dolorum.
+    </p>
   </body>
 </html>
